
include_directories(
  ${fis-gtm_SOURCE_DIR}/sr_port_cm
  ${fis-gtm_SOURCE_DIR}/sr_port
  ${fis-gtm_SOURCE_DIR}/pro/obj
  ${fis-gtm_SOURCE_DIR}/sr_unix
  ${fis-gtm_SOURCE_DIR}/sr_linux
  )

set(GTM_MUMPS2_SRC_C
  add_inter.c
  append_time_stamp.c
  backup_buffer_flush.c
  callintogtmxfer.c
  ccp_cluster_lock_wake.c
  ccp_fid_msg.c
  ccp_sendmsg.c
  ccp_userwait.c
  ce_init.c
  ce_substitute.c
  cenable.c
  ch_cond_core.c
  ch_overrun.c
  change_fhead_timer.c
  ci_ret_code.c
  cli.c
  cli_disallow.c
  cli_lex.c
  cli_parse.c
  continue_handler.c
  continue_proc.c
  crit_wake.c
  ctrap_set.c
  ctrlc_handler.c
  ctrlc_set.c
  ctrly_set.c
  cvtprot.c
  cvttime.c
  dbfilop.c
  dbinit_ch.c
  dbopen_ch.c
  dec_err.c
  deferred_signal_handler.c
  disk_block_available.c
  dm_read.c
  do_semop.c
  do_shmat.c
  do_verify.c
  do_write.c
  do_xform.c
  dollarh.c
  dpgbldir_sysops.c
  dsk_read.c
  dsk_write.c
  dsk_write_nocache.c
  dskspace_msg_timer.c
  err_init.c
  error_return.c
  gtm_main.c
  )

if(ARCHITECTURE_IS_64_BITS)
  set(GTM_MUMPS2_SRC_C
    ${GTM_MUMPS2_SRC_C}
    auto_zlink.c
    callg.c
    comp_lits.c
    dse.c
    dse_cmd.c
    gtm_unlink_all.c
    gtm_trigger.c
    incr_link.c
    exttab_parse.c
    exttime.c
    f_char.c
    f_piece.c
    fgn_getinfo.c
    file_head_read.c
    file_head_write.c
    file_input.c
    ftok.c
    ftok_sems.c
    gds_rundown.c
    gdsfilext.c
    generic_signal_handler.c
    genpat.c
    get_command_line.c
    get_full_path.c
    get_page_size.c
    get_src_line.c
    geteditor.c
    getjobnum.c
    getstorage.c
    getzmode.c
    getzprocess.c
    golevel.c
    goq_load.c
    grab_crit.c
    grab_lock.c
    gt_timers.c
    gtm.c
    gtm_bintim.c
    gtm_c_stack_trace_semop.c
    gtm_compile.c
    gtm_conv.c
    gtm_dbjnl_dupfd_check.c
    gtm_dump.c
    gtm_dump_core.c
    gtm_env_init_sp.c
    gtm_env_translate.c
    gtm_event_log.c
    gtm_exit_handler.c
    gtm_fd_trace.c
    gtm_file_remove.c
    gtm_file_stat.c
    gtm_fork_n_core.c
    gtm_getmsg.c
    gtm_getpwuid.c
    gtm_icu.c
    gtm_init_env.c
    gtm_permissions.c
    gtm_pipe.c
    gtm_putmsg.c
    gtm_putmsg_list.c
    gtm_rename.c
    gtm_startup.c
    gtm_startup_chk.c
    gtm_stdio.c
    gtm_text_alloc.c
    gtm_unique_file_util.c
    gtm_utf8.c
    gtm_utf8_stx.c
    gtm_wake.c
    gtm_zlib.c
    gtmci.c
    gtmci_ch.c
    gtmci_isv.c
    gtmci_signals.c
    gtmcrypt_entry.c
    gtmsecshr.c
    gtmsecshr_sock_cleanup.c
    gtmsecshr_sock_init.c
    gtmsecshr_wrapper.c
    gv_trigger.c

    gvcst_init_sysops.c
    gvusr.c
    heartbeat_timer.c
    init_gtm.c
    io_get_fgn_driver.c
    io_init_name.c
    io_is_rm.c
    io_is_sn.c
    io_is_tt.c
    io_open_try.c
    io_type.c
    iob_close.c
    iob_flush.c
    iob_open_rd.c
    iob_open_wt.c
    iob_read.c
    iob_write.c
    ioff_open.c
    iomt_ch.c
    iomt_closesp.c
    iomt_info.c
    iomt_open.c
    iomt_opensp.c
    iomt_qio.c
    iomt_rdlblk.c
    iomt_reopen.c
    iomt_sense.c
    iomt_tm.c
    iomt_wtlblk.c
    iopi_iocontrol.c
    iopi_open.c
    iorm_close.c
    iorm_flush.c
    iorm_get.c
    iorm_open.c
    iorm_rdone.c
    iorm_read.c
    iorm_readfl.c
    iorm_use.c
    iorm_write.c
    iorm_wteol.c
    iott_close.c
    iott_edit.c
    iott_flush.c
    iott_open.c
    iott_rdone.c
    iott_read.c
    iott_readfl.c
    iott_use.c
    iott_write.c
    ious_iocontrol.c
    ious_open.c
    ious_rdone.c
    ious_read.c
    ious_readfl.c
    ious_write.c
    ious_wtone.c
    ipcrmid.c
    is_file_identical.c
    is_proc_alive.c
    is_raw_dev.c
    jnl_file_extend.c
    jnl_fsync.c
    jnl_output_sp.c
    jnl_prc_vector.c
    jnlpool_init.c
    jobchild_init.c
    jobexam_signal_handler.c
    list_file.c
    lke_cmd_disallow.c
    lref_parse.c
    m_ztrigger.c
    make_cimode.c
    make_dmode.c
    map_sym.c
    mem_access.c
    mubexpfilnam.c
    mubfilcpy.c
    mumps_clitab.c
    mup_bak_sys.c
    mupip.c
    mupip_cmd.c
    mupip_crypt.c
    mutex.c
#   mutex_deadlock_check.c   in sr_port
    mutex_sock_cleanup.c
    mutex_sock_init.c
    mutex_wake_proc.c
    mu_decrypt.c
    obj_code.c
    obj_file.c
    ojchildioclean.c
    ojchildioset.c
    ojchildparms.c
    ojchkfs.c
    ojgetch_env.c
    ojparams.c
    ojstartchild.c
    op_fgnlookup.c
    op_fnextract.c
    op_fnfgncal.c
    op_fngetdvi.c
    op_fngetjpi.c
    op_fngetlki.c
    op_fngetsyi.c
    op_fnp1.c
    op_fnpiece.c
    op_fnpopulation.c
    op_fnrandom.c
    op_fnzcall.c
    op_fnzconvert.c
    op_fnzfile.c
    op_fnzlkid.c
    op_fnzparse.c
    op_fnzpid.c
    op_fnzpriv.c
    op_fnzsearch.c
    op_fnzsetprv.c
    op_fnztrnlnm.c
    op_horolog.c
    op_job.c
    op_setextract.c
    op_setp1.c
    op_setpiece.c
    op_zattach.c
    op_zedit.c
    op_zhelp_xfr.c
    op_zlink.c
    op_zmess.c
    op_ztrigger.c
    outc.c
    parse_file.c
    pipeint_stats.c
    probe.c
    random.c
    rc_cpt_ops.c
    reg_cmcheck.c
    rel_crit.c
    rel_lock.c
    remove_rms.c
    repl_instance.c
    repl_sem.c
    resetterm.c
    rts_error.c
    same_device_check.c
    secshr_client.c
    semstat2.c
    send_msg.c
    set_jnl_file_close.c
    set_num_additional_processors.c
    set_zstatus.c
    setterm.c
    sgtm_putmsg.c
    sig_init.c
    sleep.c
    source_file.c
    ss_context_mgr.c
    ss_lock_facility.c
    ss_release.c
    ss_shdw_mgr.c
    ss_write_block.c
    std_dev_outbndset.c
    stop_image.c
    stop_image_ch.c
    str_match.c
    suspend.c
    suspsigs_handler.c
    term_setup.c
    tp_grab_crit.c
    trans_log_name.c
    trigger_cmd.c
    trigger_compare.c
    trigger_delete.c
    trigger_fill_xecute_buffer.c
    trigger_gbl_fill_xecute_buffer.c
    trigger_incr_cycle.c
    trigger_parse.c
    trigger_read_name_entry.c
    trigger_scan_string.c
    trigger_select.c
    trigger_source_read_andor_verify.c
    trigger_tpwrap_ch.c
    trigger_trgfile.c
    trigger_update.c
    trigger_user_name.c
    urx_remove.c
    util_exit_handler.c
    util_in_open.c
    util_input.c
    util_output.c
    util_output_cm.c
    util_spawn.c
    wcs_clean_dbsync.c
    wcs_clean_dbsync_timer.c
    wcs_flu.c
    wcs_get_space.c
    wcs_write_in_progress_wait.c
    wcs_wtstart.c
    zcall_package.c
    zl_cmd_qlf.c
    zlmov_lnames.c
    zro_gettok.c
    zro_load.c
    zro_search.c
    zro_shlibs.c
    zshow_devices.c
    zshow_zcalls.c
    )
endif()


if(ARCHITECTURE_IS_32_BITS)
  set(GTM_MUMPS2_SRC_C
    ${GTM_MUMPS2_SRC_C}
    daemon_ch.c
    daemon_crit.c
    extract_signal_info.c
#   sr_unix_nsb/comp_lits.c
    )
endif()


if(NEED_TO_ADD_SOURCES)
  set(GTM_MUMPS2_SRC_C
    ${GTM_MUMPS2_SRC_C}
    jnl_file_open.c
    make_mode.c     # apparently used in 64 bits...
    )
endif(NEED_TO_ADD_SOURCES)

set(GTM_LKE_UNIX_SRC_C
  lke_fileio.c
  lke_getansw.c
  lke_help.c
  lke_setgdr.c
  )

set(GTM_MUPIP_SRC_C
  bin_load.c
  db_ipcs_reset.c
  go_load.c
  gtmrecv.c
  gtmrecv_end.c
  gtmrecv_fetchresync.c
  gtmrecv_poll_actions.c
  gtmrecv_process.c
  gtmrecv_shutdown.c
  gtmsource.c
  gtmsource_changelog.c
  gtmsource_checkhealth.c
  gtmsource_end.c
  gtmsource_flush_fh.c
  gtmsource_get_opt.c
  gtmsource_heartbeat.c
  gtmsource_jnl_release_timer.c
  gtmsource_jnlpool.c
  gtmsource_losttncomplete.c
  gtmsource_mode_change.c
  gtmsource_needrestart.c
  gtmsource_process.c
  gtmsource_process_ops.c
  gtmsource_readfiles.c
  gtmsource_readpool.c
  gtmsource_rootprimary_init.c
  gtmsource_seqno_init.c
  gtmsource_showbacklog.c
  gtmsource_shutdown.c
  gtmsource_statslog.c
  gtmsource_stopfilter.c
  jnlext_write.c
  mu_all_version_standalone.c
  mu_cre_file.c
  mu_cre_structs.c
  mu_extract.c
  mu_file_size.c
  mu_getlst.c
  mu_gvis.c
  mu_int_ch.c
  mu_op_open.c
  mu_outofband_setup.c
  mu_replpool_grab_sem.c
  mu_replpool_remove_sem.c
  mu_rndwn_all.c
  mu_rndwn_file.c
  mu_rndwn_repl_instance.c
  mu_rndwn_replpool.c
  mu_signal_process.c
  mu_term_setup.c
  mu_trig_trgfile.c
  mubgetfil.c
  mubinccpy.c
  mucblkini.c
  mupip_cmd_disallow.c
  mupip_ctrl.c
  mupip_cvtgbl.c
  mupip_cvtpgm.c
  mupip_endiancvt.c
  mupip_exit.c
  mupip_exit_handler.c
  mupip_ftok.c
  mupip_help.c
  mupip_quit.c
  mupip_restore.c
  mupip_rundown.c
  mupip_set_file.c
  mupip_set_jnlfile.c
  mupip_trigger.c
  mupip_upgrade_standalone.c
  mur_cre_file_extfmt.c
  mur_read_file_sp.c
  murgetlst.c
  recvpool_init.c
  repl_inst_create.c
  repl_inst_dump.c
  repl_inst_edit.c
  repl_ipc_cleanup.c
  repl_log.c
  repl_log_init.c
  ss_anal_shdw_file.c
  ss_get_block.c
  ss_initiate.c
  ss_read_block.c
  upd_log_init.c
  )

set(GTM_DSE_UNIX_SRC_C
  dse_cmd_disallow.c
  dse_ctrlc_handler.c
  dse_help.c
  dse_open.c
  dse_puttime.c
  dse_remove.c
  )

set(GTM_STUB_UNIX_SRC_C
  gtcmstub.c
  cmistub.c
  gtcmtrstub.c
  gvcmx_canremlk_stub.c
  gvcmx_reqremlk_stub.c
  gvcmx_resremlk_stub.c
  gvcmx_susremlk_stub.c
  gvcmz_bunch_stub.c
  gvcmz_error_stub.c
  gvcmz_neterr_stub.c
  gvcmz_zflush_stub.c
  )


add_library(lkeunix
  ${GTM_LKE_UNIX_SRC_C}
  )

add_library(mupip
  ${GTM_MUPIP_SRC_C}
  )

add_library(mumpsunix
  ${GTM_MUMPS2_SRC_C}
  )

add_library(dseunix
  ${GTM_DSE_UNIX_SRC_C}
  )

add_library(stubunix
  ${GTM_STUB_UNIX_SRC_C}
  )

#
#  Complimentary pieces are in sr_port
#
add_library(dbcertifyunix
  dbcertify_cmd.c
  dbcertify_dbfilop.c
  dbcertify_deferred_signal_handler.c
  dbcertify_parse_and_dispatch.c
  dbcertify_signal_handler.c
  )


