include_directories(
  ${fis-gtm_SOURCE_DIR}/sr_i386
  ${fis-gtm_SOURCE_DIR}/sr_port_cm
  ${fis-gtm_SOURCE_DIR}/sr_port
  ${fis-gtm_SOURCE_DIR}/pro/obj
  ${fis-gtm_SOURCE_DIR}/sr_unix_nsb
  ${fis-gtm_SOURCE_DIR}/sr_unix
  ${fis-gtm_SOURCE_DIR}/sr_linux
  ${fis-gtm_SOURCE_DIR}/sr_x86_64
  )

set(GTM_UNIX_CM_SRC
  gtcm_bgn_net.c
  gtcm_cn_acpt.c
  gtcm_cn_disc.c
  gtcm_dmpstat.c
  gtcm_end_net.c
  gtcm_exit.c
  gtcm_exit_ch.c
  gtcm_hist.c
  gtcm_init.c
  gtcm_loop.c
  gtcm_main.c
  gtcm_ping.c
  gtcm_pkdisp.c
  gtcm_pktdmp.c
  gtcm_play.c
  gtcm_prsopt.c
  gtcm_rep_err.c
  gtcm_shmclean.c
  gtcm_term.c
  omi_buff_rsp.c
  omi_dbms_ch.c
  omi_dmp_pkt.c
  omi_extstr.c
  omi_gvextnam.c
  omi_lkextnam.c
  omi_prc_conn.c
  omi_prc_def.c
  omi_prc_disc.c
  omi_prc_get.c
  omi_prc_incr.c
  omi_prc_kill.c
  omi_prc_lock.c
  omi_prc_next.c
  omi_prc_ordr.c
  omi_prc_qry.c
  omi_prc_rord.c
  omi_prc_set.c
  omi_prc_sete.c
  omi_prc_setp.c
  omi_prc_stat.c
  omi_prc_unla.c
  omi_prc_unlc.c
  omi_prc_unlk.c
  omi_srvc_xct.c
  rc_dbms_ch.c
  rc_fnd_file.c
  rc_frmt_lck.c
  rc_gbl_ord.c
  rc_iscan.c
  rc_mval2subsc.c
  rc_oflow.c
  rc_prc_clsd.c
  rc_prc_getp.c
  rc_prc_getr.c
  rc_prc_kill.c
  rc_prc_lock.c
  rc_prc_logn.c
  rc_prc_opnd.c
  rc_prc_set.c
  rc_prc_setf.c
  rc_rundown.c
  rc_srvc_xct.c
  )

add_library(gtm_unix_cm
  ${GTM_UNIX_CM_SRC}
  )

